prac4/peer-auth.yaml
# PeerAuthentication / mTLS
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: book-info
  namespace: book-info
spec:
  mtls:
    mode: STRICT          # mTLSを強制（平文通信を拒否）
