prac4/secret-test-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: secret-test-pod
  namespace: k8s-defense
spec:
  containers:
  - name: app
    image: busybox
    command: ["sh", "-c", "env | grep API_KEY && cat /mnt/secrets/API_KEY && sleep 3600"]
    volumeMounts:
    - name: secret-volume
      mountPath: "/mnt/secrets"
  volumes:
  - name: secret-volume
    secret:
      secretName: api-key-secret
