prac4/autho-deny-all.yaml
# Deny all request  
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: deny-all
  namespace: book-info
spec:
  {}
