prac4/autho-productpage.yaml
# Allow from ingress to productpage
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: allow-ingress-to-productpage
  namespace: book-info
spec:
  selector:
    matchLabels:
      app: productpage # 対象：productpage
  action: ALLOW
  rules:
  - from:
    - source:
        principals: ["cluster.local/ns/istio-system/sa/istio-ingressgateway-service-account"]
